<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#323232"
    tools:context=".MainActivity"
    android:backgroundTint="@color/color_primary_dark">


    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="128dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="44dp"
        android:paddingEnd="3dp"
        android:paddingBottom="4dp"
        android:text="@string/face_detector_application"
        android:textColor="@color/white"
        android:textSize="27sp"
        tools:ignore="RtlSymmetry" />


    <ImageView
        android:id="@+id/iv"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginHorizontal="100dp"
        android:src="@drawable/img"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="350dp"
        android:backgroundTint="@color/border_color"
        android:padding="15dp"
        android:text="@string/tap_to_camera"
        android:textAllCaps="true" />

    <TextView
        android:id="@+id/tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn1"
        android:layout_marginTop="10dp"
        android:text="@string/directions_to_use"
        android:textColor="@color/white" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv4"
        android:textColor="@color/white"
        android:layout_below="@+id/tv3"
        android:layout_centerHorizontal="true"
        android:text="@string/tap_the_use_camera_button"
        android:layout_marginTop="15dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:id="@+id/tv5"
        android:layout_below="@+id/tv4"
        android:layout_centerHorizontal="true"
        android:text="@string/smile_onto_the_camera_and_click_the_image"
        android:layout_marginTop="5dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:id="@+id/tv6"
        android:layout_below="@+id/tv5"
        android:layout_centerHorizontal="true"
        android:text="@string/confirm_the_image_or_retake"
        android:layout_marginTop="5dp"
        />

    <TextView
        android:id="@+id/tv7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/the_results_will_be_shown_after_you_confirm_the_image"
        android:textColor="@color/white" />

    <ImageView
        android:id="@+id/iv2"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_below="@+id/heading"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="180dp"
        app:srcCompat="@drawable/img_1"
        android:contentDescription="@string/todo" />


</RelativeLayout>